commit 99  - body conatainer 변경  - 상품 화면 container css -> 따로 빼기

--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -9,7 +9,8 @@
     <th:block layout:fragment="head"></th:block>
 </head>
 
-<body class="container-xl">
+<!--<body class="container-xl">-->
+<body style="width: 80%; margin: 0 auto;">
 <!--<body>-->
     <th:block th:replace="fragments/header :: headerFragment"></th:block>
     <div class="content-section" style="height: 800px; overflow-y: auto;">
