--- a/src/main/resources/templates/user/myInfo.html
+++ b/src/main/resources/templates/user/myInfo.html
@@ -8,7 +8,7 @@
 </th:block>
 
 <th:block layout:fragment="content">
-    <div class="container-sm mt-3">
+    <div class="mt-3">
             <div class="card-body" style="width: 50%;">
             <form id="update-form" class="needs-validation" novalidate>
                 <input type="hidden" name="userId" th:value="${user.userId}" />
