--- a/src/main/resources/templates/bbs/faq/index.html
+++ b/src/main/resources/templates/bbs/faq/index.html
@@ -9,7 +9,7 @@
 </th:block>
 
 <th:block layout:fragment="content">
-    <div class="container-sm mt-3">
+    <div class="mt-3">
         <div class="card-header" style="margin-bottom: 10px">
             <div class="card-text d-flex justify-content-between">
                 <div class="text-start">
