--- a/src/main/resources/templates/category/index.html
+++ b/src/main/resources/templates/category/index.html
@@ -9,37 +9,11 @@
         .nav-link {
             margin-top: 10px; /* Adjust the margin-top value as needed */
         }
-        .image-grid {
-            display: grid;
-            grid-template-columns: repeat(6, 1fr); /* 6 columns */
-            gap: 10px; /* Spacing between items */
-        }
-
-        .image-item {
-            text-align: center;
-        }
-
-        .image-item img {
-            width: 100%; /* Resize images to fit their container */
-        }
-
-        .product-info {
-            display: inline-block;
-            vertical-align: top; /* Align the elements to the top of the line */
-            margin-right: 10px; /* Add some spacing between the two <p> tags */
-        }
-
-        .image-name {
-            text-align: center; /* Align text to the left */
-            margin: 0; /* Remove any default margins */
-            padding: 0; /* Remove any default padding */
-            font-weight: bold;
-        }
     </style>
 </th:block>
 
 <th:block layout:fragment="content">
-    <div class="container-sm mt-3">
+    <div class="mt-3">
         <div class="card-header" style="margin-bottom: 10px">
             <div class="card-text d-flex justify-content-between">
                 <div class="text-start">
@@ -147,11 +121,26 @@
                         <div class="modal-body">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col-md-6 col-12">
-                                        <div class="mb-1">
-                                            <label class="form-label" for="categoryName">카테고리 이름<span class="text-primary ms-50">*</span></label>
-                                            <input type="text" id="categoryName" class="form-control" name="categoryName" required/>
-                                            <div class="invalid-feedback">카테고리 이름을 입력해주세요.</div>
+                                    <div class="col-md-12 col-12" style="margin-bottom: 10px; align-content: center">
+<!--                                        <div class="image-grid">-->
+<!--                                            <div class="image-item">-->
+<!--                                               -->
+
+<!--                                                <div class="product-info">-->
+<!--                                                    <p class="image-name">-->
+<!--                                                        <span id="product-name">빵</span>-->
+<!--                                                        <i data-feather="star" class="font-medium-2 ms-50" disabled id="product-new-yn"></i>-->
+<!--                                                    </p>-->
+<!--                                                    <p id="product-price" class="image-name">가격: 2,000</p>-->
+<!--                                                    <p id="product-cnt" class="image-name">재고: 3개</p>-->
+<!--                                                </div>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+                                        <div class="product-container">
+                                            <img src="/assets/src/shop/noImage.png" class="rounded" alt="Image" style="width: 150px; height: 150px" id="product-img">
+                                            <div class="product-name">Product Name</div>
+                                            <div class="product-price">$19.99</div>
+                                            <div class="product-stock">In Stock</div>
                                         </div>
                                     </div>
                                     <div class="col-md-6 col-12">
@@ -181,8 +170,8 @@
                                 </div>
                                 <div style="margin-top: 10px" class="text-end">
                                     <button type="button" class="btn btn-outline-secondary" id="close-productModal">닫기</button>
-                                    <button type="submit" class="btn btn-outline-primary" id="into-purchase">주문하기</button>
-                                    <button type="submit" class="btn btn-outline-info" id="into-chart">장바구니담기</button>
+                                    <button type="submit" class="btn btn-outline-primary" id="into-purchase">🎁주문하기</button>
+                                    <button type="submit" class="btn btn-outline-success" id="into-chart">🛒장바구니담기</button>
                                 </div>
                             </div>
                         </div>
