--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -8,7 +8,7 @@
 </th:block>
 
 <th:block layout:fragment="content">
-    <div class="container-sm mt-3">
+    <div class="mt-3">
         <div class="text-center">
             <img src="/assets/src/error/403.png">
         </div>
