--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 </th:block>
 
 <th:block layout:fragment="content">
-    <div class="container-sm mt-3">
+    <div class="mt-3">
         <div class="text-center">
             <h3><b>Hong Shop</b></h3>
             <span>Hong Shop 옷 가게 온라인 쇼핑몰입니다.</span>
