--- a/src/main/resources/templates/manager/fileDownload.html
+++ b/src/main/resources/templates/manager/fileDownload.html
@@ -10,11 +10,15 @@
             text-align: center;
             vertical-align: middle;
         }
+        
+        tr {
+            text-align: center;
+        }
     </style>
 </th:block>
 
 <th:block layout:fragment="content">
-    <div class="container-sm mt-3">
+    <div class="mt-3">
         <div class="card-header" style="margin-bottom: 10px">
             <div class="card-text d-flex justify-content-between">
                 <div class="text-start">
@@ -26,37 +30,37 @@
         <div class="card-body">
             <table class="table table-bordered" id="cart-table">
                 <thead>
-                <tr style="text-align: center;">
-                    <th style="width: 5%;" class="text-center" rowspan="2">파일그룹ID</th>
-                    <th style="width: 50%" class="text-center" colspan="7">파일</th>
-                </tr>
-                <tr>
-                    <th style="width: 5%;" class="text-center">파일ID</th>
-                    <th style="width: 10%;" class="text-center">파일이름</th>
-                    <th style="width: 5%;" class="text-center">파일크기</th>
-                    <th style="width: 5%;" class="text-center">파일확장자</th>
-                    <th style="width: 20%;" class="text-center">파일저장 경로</th>
-                    <th style="width: 5%;" class="text-center">다운로드 회수</th>
-                    <th style="width: 5%" class="text-center">로그확인</th>
-                </tr>
+                    <tr>
+                        <th style="width: 5%;" rowspan="2">파일그룹ID</th>
+                        <th style="width: 50%" colspan="7">파일</th>
+                    </tr>
+                    <tr>
+                        <th style="width: 5%;">파일ID</th>
+                        <th style="width: 10%;">파일이름</th>
+                        <th style="width: 5%;">파일크기</th>
+                        <th style="width: 5%;">파일확장자</th>
+                        <th style="width: 20%;">파일저장 경로</th>
+                        <th style="width: 5%;">다운로드 회수</th>
+                        <th style="width: 5%">로그확인</th>
+                    </tr>
                 </thead>
                 <tbody>
                     <th:block th:if="${fileGroupList.size() == 0}">
-                        <tr style="text-align: center;">
+                        <tr>
                             <td colspan="3">파일정보가 비어있습니다.</td>
                         </tr>
                     </th:block>
                     <th:block th:unless="${fileGroupList.size() == 0}">
                         <th:block th:each="file, fileStat : ${fileGroupList}">
                             <tr>
-                                <td th:text="${file.id}" style="width: 5%; text-align: center;" th:rowspan="${file.fileList.size()}"></td>
-                                <td th:text="${file.fileList.get(0).id}" style="width: 5%;" class="text-center"></td>
-                                <td th:text="${file.fileList.get(0).originalFileName}" style="width: 10%;" class="text-center"></td>
-                                <td th:text="${file.fileList.get(0).fileSize}" style="width: 5%;" class="text-center"></td>
-                                <td th:text="${file.fileList.get(0).extension}" style="width: 5%;" class="text-center"></td>
-                                <td th:text="${file.fileList.get(0).filePath}" style="width: 20%;" class="text-center"></td>
-                                <td th:text="${file.fileList.get(0).downCnt}" style="width: 5%;" class="text-center"></td>
-                                <td style="width: 5%;" class="text-center">
+                                <td th:text="${file.id}" style="width: 5%" th:rowspan="${file.fileList.size()}"></td>
+                                <td th:text="${file.fileList.get(0).id}" style="width: 5%;"></td>
+                                <td th:text="${file.fileList.get(0).originalFileName}" style="width: 10%;"></td>
+                                <td th:text="${file.fileList.get(0).fileSize}" style="width: 5%;"></td>
+                                <td th:text="${file.fileList.get(0).extension}" style="width: 5%;"></td>
+                                <td th:text="${file.fileList.get(0).filePath}" style="width: 20%;"></td>
+                                <td th:text="${file.fileList.get(0).downCnt}" style="width: 5%;"></td>
+                                <td style="width: 5%;"  >
                                     <button type="button" class="btn btn-sm btn-outline-success log-btn" th:data-num="${file.fileList.get(0).id}">로그</button>
                                 </td>
                             </tr>
@@ -64,13 +68,13 @@
                                 <th:block th:each="fileList , fileListStat : ${file.fileList}">
                                     <th:block th:unless="${fileListStat.first}">
                                         <tr>
-                                            <td th:text="${fileList.id}" style="width: 5%;" class="text-center"></td>
-                                            <td th:text="${fileList.originalFileName}" style="width: 10%;" class="text-center"></td>
-                                            <td th:text="${fileList.fileSize}" style="width: 5%;" class="text-center"></td>
-                                            <td th:text="${fileList.extension}" style="width: 5%;" class="text-center"></td>
-                                            <td th:text="${fileList.filePath}" style="width: 20%;" class="text-center"></td>
-                                            <td th:text="${fileList.downCnt}" style="width: 5%;" class="text-center"></td>
-                                            <td style="width: 5%;" class="text-center">
+                                            <td th:text="${fileList.id}" style="width: 5%;"></td>
+                                            <td th:text="${fileList.originalFileName}" style="width: 10%;"></td>
+                                            <td th:text="${fileList.fileSize}" style="width: 5%;"></td>
+                                            <td th:text="${fileList.extension}" style="width: 5%;"></td>
+                                            <td th:text="${fileList.filePath}" style="width: 20%;"></td>
+                                            <td th:text="${fileList.downCnt}" style="width: 5%;"></td>
+                                            <td style="width: 5%;">
                                                 <button type="button" class="btn btn-sm btn-outline-success log-btn" th:data-num="${fileList.id}">로그</button>
                                             </td>
                                         </tr>
@@ -98,11 +102,11 @@
                     <div class="modal-body">
                         <table class="table table-hover table-bordered" id="download-log-table">
                             <thead>
-                                <tr style="text-align: center;">
-                                    <th style="width: 5%;" class="text-center">번호</th>
-                                    <th style="width: 10%" class="text-center">다운로드 사용자 이름</th>
-                                    <th style="width: 10%" class="text-center">다운로드 사용자 ID</th>
-                                    <th style="width: 10%" class="text-center">다운로드날짜</th>
+                                <tr>
+                                    <th style="width: 5%;">번호</th>
+                                    <th style="width: 10%">다운로드 사용자 이름</th>
+                                    <th style="width: 10%">다운로드 사용자 ID</th>
+                                    <th style="width: 10%">다운로드날짜</th>
                                 </tr>
                             </thead>
                             <tbody id="download-log-tbody"></tbody>
@@ -152,16 +156,16 @@
             dom.empty()
 
             let body = ``
-            if(!data.length) body += `<tr><td colspan="3" class="text-center"> 다운로드 기록이 없습니다. </td></tr>`
+            if(!data.length) body += `<tr><td colspan="4"> 다운로드 기록이 없습니다. </td></tr>`
             else {
                 data.forEach((data, i) => {
                     body +=
                         `
-                        <tr class="text-center">
-                            <td class="text-center">${i+1}</td>
-                            <td class="text-center">${data['userName']}</td>
-                            <td class="text-center">${data['userId']}</td>
-                            <td class="text-center">${data['downloadDate'].toString().substring(0, 10)}</td>
+                        <tr>
+                            <td>${i+1}</td>
+                            <td>${data['userName']}</td>
+                            <td>${data['userId']}</td>
+                            <td>${data['downloadDate'].toString().substring(0, 10)}</td>
                         </tr>
                         `
                 })
