--- a/src/main/resources/templates/manager/order.html
+++ b/src/main/resources/templates/manager/order.html
@@ -10,11 +10,14 @@
             text-align: center;
             vertical-align: middle;
         }
+        tr{
+            text-align: center;
+        }
     </style>
 </th:block>
 
 <th:block layout:fragment="content">
-    <div class="container-sm mt-3">
+    <div class="mt-3">
         <div class="card-header" style="margin-bottom: 10px">
             <div class="card-text d-flex justify-content-between">
                 <div class="text-start">
@@ -26,34 +29,34 @@
         <div class="card-body">
             <table class="table table-bordered" id="cart-table">
                 <thead>
-                    <tr style="text-align: center;">
-                        <th style="width: 5%;" class="text-center">번호</th>
-                        <th style="width: 10%" class="text-center">주문자</th>
-                        <th style="width: 10%" class="text-center">주문상태</th>
-                        <th style="width: 10%" class="text-center">주문날짜</th>
-                        <th style="width: 20%" class="text-center">주문상품</th>
-                        <th style="width: 10%" class="text-center">주문개수</th>
-                        <th style="width: 20%" class="text-center">주문가격</th>
-                        <th style="width: 10%" class="text-center">상태변경</th>
+                    <tr>
+                        <th style="width: 5%;">번호</th>
+                        <th style="width: 10%">주문자</th>
+                        <th style="width: 10%">주문상태</th>
+                        <th style="width: 10%">주문날짜</th>
+                        <th style="width: 20%">주문상품</th>
+                        <th style="width: 10%">주문개수</th>
+                        <th style="width: 20%">주문가격</th>
+                        <th style="width: 10%">상태변경</th>
                     </tr>
                 </thead>
                 <tbody>
                     <th:block th:if="${orderList.size() == 0}">
-                        <tr style="text-align: center;">
+                        <tr>
                             <td colspan="8">사용자 주문 정보가 비어있습니다.</td>
                         </tr>
                     </th:block>
                     <th:block th:unless="${orderList.size() == 0}">
                         <th:block  th:each="orders, orStat : ${orderList}">
                             <tr>
-                                <td th:text="${orStat.index + 1}" th:rowspan="${orders.orderDetails.size()}" style="width: 5%; text-align: center;"></td>
-                                <td th:text="${orders.userId}" th:rowspan="${orders.orderDetails.size()}" style="width: 10%; text-align: center;"></td>
-                                <td th:text="${orders.orderStatus}" th:rowspan="${orders.orderDetails.size()}" style="width: 10%; text-align: center;"></td>
-                                <td th:text="${#strings.substring(orders.orderDate, 0, 10)}" th:rowspan="${orders.orderDetails.size()}" style="width: 10%; text-align: center;"></td>
-                                <td th:text="${orders.orderDetails.get(0).productName}" style="width: 20%; text-align: center"></td>
-                                <td th:text="|${orders.orderDetails.get(0).orderCnt}개|" style="width: 10%; text-align: center"></td>
-                                <td th:text="${#numbers.formatInteger(orders.orderDetails.get(0).orderPrice, 0, 'COMMA')}" style="width: 20%; text-align: center"></td>
-                                <td th:rowspan="${orders.orderDetails.size()}" style="width: 10%; text-align: center;">
+                                <td th:text="${orStat.index + 1}" th:rowspan="${orders.orderDetails.size()}" style="width: 5%"></td>
+                                <td th:text="${orders.userId}" th:rowspan="${orders.orderDetails.size()}" style="width: 10%"></td>
+                                <td th:text="${orders.orderStatus}" th:rowspan="${orders.orderDetails.size()}" style="width: 10%"></td>
+                                <td th:text="${#strings.substring(orders.orderDate, 0, 10)}" th:rowspan="${orders.orderDetails.size()}" style="width: 10%"></td>
+                                <td th:text="${orders.orderDetails.get(0).productName}" style="width: 20%"></td>
+                                <td th:text="|${orders.orderDetails.get(0).orderCnt}개|" style="width: 10%"></td>
+                                <td th:text="${#numbers.formatInteger(orders.orderDetails.get(0).orderPrice, 0, 'COMMA')}" style="width: 20%"></td>
+                                <td th:rowspan="${orders.orderDetails.size()}" style="width: 10%">
                                     <select th:id="|orderStatus-${orders.orderId}|" class="form-select-sm orderStatus-select" style="width: 150px" th:data-num="${orders.orderId}" th:data-status="${orders.orderStatus}">
                                         <option value="CHARGED" th:selected="${orders.orderStatus eq 'CHARGED'}">CHARGED</option>
                                         <option value="CANCEL" th:selected="${orders.orderStatus eq 'CANCEL'}">CANCEL</option>
@@ -66,9 +69,9 @@
                                 <th:block th:each="detail, detailStat : ${orders.orderDetails}">
                                     <th:block th:if="${!detailStat.first}">
                                         <tr>
-                                            <td th:text="${detail.productName}" style="width: 20%; text-align: center"></td>
-                                            <td th:text="|${detail.orderCnt}개|" style="width: 10%; text-align: center"></td>
-                                            <td th:text="${#numbers.formatInteger(detail.orderPrice, 0, 'COMMA')}" style="width: 20%; text-align: center"></td>
+                                            <td th:text="${detail.productName}" style="width: 20%"></td>
+                                            <td th:text="|${detail.orderCnt}개|" style="width: 10%"></td>
+                                            <td th:text="${#numbers.formatInteger(detail.orderPrice, 0, 'COMMA')}" style="width: 20%"></td>
                                         </tr>
                                     </th:block>
                                 </th:block>
