--- a/src/main/resources/templates/manager/user.html
+++ b/src/main/resources/templates/manager/user.html
@@ -10,11 +10,14 @@
             text-align: center;
             vertical-align: middle;
         }
+        tr{
+            text-align: center;
+        }
     </style>
 </th:block>
 
 <th:block layout:fragment="content">
-    <div class="container-sm mt-3">
+    <div class="mt-3">
         <div class="card-header" style="margin-bottom: 10px">
             <div class="card-text d-flex justify-content-between">
                 <div class="text-start">
@@ -26,14 +29,15 @@
         <div class="card-body">
             <table class="table table-bordered" id="cart-table">
                 <thead>
-                    <tr style="text-align: center;">
-                        <th style="width: 5%;" class="text-center" rowspan="2">번호</th>
-                        <th style="width: 10%" class="text-center" rowspan="2">사용자ID</th>
-                        <th style="width: 10%" class="text-center" rowspan="2">ROLE</th>
-                        <th style="width: 10%" class="text-center" rowspan="2">이름</th>
-                        <th style="width: 10%" class="text-center" rowspan="2">이메일</th>
-                        <th style="width: 10%" class="text-center" COLSPAN="3">주소</th>
-                        <th style="width: 10%" class="text-center" rowspan="2">ROLE 변경</th>
+                    <tr>
+                        <th style="width: 5%;" rowspan="2">번호</th>
+                        <th style="width: 10%" rowspan="2">사용자ID</th>
+                        <th style="width: 10%" rowspan="2">계정정지여부</th>
+                        <th style="width: 10%" rowspan="2">ROLE</th>
+                        <th style="width: 10%" rowspan="2">이름</th>
+                        <th style="width: 10%" rowspan="2">이메일</th>
+                        <th style="width: 10%" COLSPAN="3">주소</th>
+                        <th style="width: 10%" rowspan="2">ROLE 변경</th>
                     </tr>
                     <tr>
                         <th>시/도</th>
@@ -43,22 +47,23 @@
                 </thead>
                 <tbody>
                 <th:block th:if="${userList.size() == 0}">
-                    <tr style="text-align: center;">
-                        <td colspan="5">사용자 정보가 비어있습니다.</td>
+                    <tr>
+                        <td colspan="7">사용자 정보가 비어있습니다.</td>
                     </tr>
                 </th:block>
                 <th:block th:unless="${userList.size() == 0}">
                     <th:block  th:each="user, userStat : ${userList}">
                         <tr>
-                            <td th:text="${userStat.index + 1}" style="width: 5%; text-align: center;"></td>
-                            <td th:text="${user.userId}" style="width: 10%; text-align: center;"></td>
-                            <td th:text="${user.role}" style="width: 10%; text-align: center;"></td>
-                            <td th:text="${user.userName}" style="width: 10%; text-align: center;"></td>
-                            <td th:text="${user.userEmail}" style="width: 20%; text-align: center;"></td>
-                            <td th:text="${user.city}" style="width: 10%; text-align: center;"></td>
-                            <td th:text="${user.street}" style="width: 20%; text-align: center"></td>
-                            <td th:text="${user.zipcode}" style="width: 10%; text-align: center"></td>
-                            <td style="width: 10%; text-align: center;">
+                            <td th:text="${userStat.index + 1}" style="width: 5%"></td>
+                            <td th:text="${user.userId}" style="width: 10%"></td>
+                            <td th:text="${user.userNonLocked == false ? '정지' : '-'}" style="width: 10%"></td>
+                            <td th:text="${user.role}" style="width: 10%"></td>
+                            <td th:text="${user.userName}" style="width: 10%"></td>
+                            <td th:text="${user.userEmail}" style="width: 20%"></td>
+                            <td th:text="${user.city}" style="width: 10%"></td>
+                            <td th:text="${user.street}" style="width: 20%"></td>
+                            <td th:text="${user.zipcode}" style="width: 10%"></td>
+                            <td style="width: 10%">
                                 <select th:id="|userRole-${user.id}|" class="form-select-sm userRole-select" style="width: 150px" th:data-num="${user.id}" th:data-userId="${user.userId}" th:data-role="${user.role}">
                                     <option value="ROLE_ADMIN" th:selected="${user.role eq 'ROLE_ADMIN'}">ROLE_ADMIN</option>
                                     <option value="ROLE_USER" th:selected="${user.role eq 'ROLE_USER'}">ROLE_USER</option>
