commit 101 - 주문하기 모달창 validation 추가 및 모달화면 구성 - 장바구니 화면 버튼으로 상품 구매 화면 이동

--- a/src/main/resources/templates/cart/index.html
+++ b/src/main/resources/templates/cart/index.html
@@ -15,7 +15,7 @@
                     <h3>🛒 장바구니 🛒</h3>
                 </div>
                 <div class="text-end">
-                    <button type="button" class="btn btn-info">상품보러가기</button>
+                    <button type="button" class="btn btn-info" onclick="location.href='/category/new'">상품보러가기</button>
                 </div>
             </div>
         </div>
