--- a/src/main/resources/static/assets/css/category/category.shop.css
+++ b/src/main/resources/static/assets/css/category/category.shop.css
@@ -15,6 +15,7 @@
 /* 상품 보기 page -> 상품 모달 -> 상품 이름 */
 .product-name {
     margin: 10px 0;
+    font-weight: bold;
 }
 
 /* 상품 보기 page -> 상품 모달 -> 상품 가격 */
@@ -25,6 +26,7 @@
 /* 상품 보기 page -> 상품 모달 -> 상품 재고 */
 .product-stock {
     color: green;
+    font-weight: bold;
 }
 
 /* 상품 보기 page -> 이미지 그리드 (1줄 6개) */
